test/libsolidity/syntaxTests/nameAndTypeResolution/551_warn_about_address_members_on_non_this_contract_callcode.sol
contract C {
    function f() pure public {
        C c;
        c.callcode;
    }
}
// ----
// TypeError: (65-75): Member "callcode" not found or not visible after argument-dependent lookup in contract C
